--- a/app/globals.css
+++ b/app/globals.css
@@ -9,9 +9,9 @@
 }
 
 #main {
-  background: transparent;
-  z-index: -2;
-  /* background-color: rgb(30, 27, 75); */
+  position: absolute;
+  z-index: -3;
+  background-color: rgb(30, 27, 75);
 }
 
 #shapes {
@@ -24,6 +24,28 @@
   overflow: hidden;
   justify-content: center;
 }
+
+#light,
+#light2 {
+  filter: blur(20px);
+  height: 100vh;
+  object-fit: fill;
+  width: 100vw;
+  z-index: 0;
+  position: absolute;
+  mix-blend-mode: color-dodge;
+  opacity: 40%;
+}
+
+#light {
+  top: 0;
+  transform: rotate(180deg);
+}
+
+#light2 {
+  bottom: 0;
+}
+
 #alien {
   /* position: fixed; */
   filter: drop-shadow(4px 4px 5px rgba(0, 0, 0, 0.681));
@@ -38,6 +60,7 @@
   right: -4em;
   border-radius: 2em;
   background: radial-gradient(100em, rgb(78, 72, 157), rgb(18, 154, 109), rgb(123, 223, 254));
+  background-blend-mode: color;
   transform: skewX(340deg) skewY(30deg);
 }
 
